Top movers section updated

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       </p>
     </div>
   </Section>
-  <br>
+  <!--Cut the Hustle Section-->
   <section class="sec2">
     <div>
-      <img src="../Quick_Movers/Assests/Images/moving2 1.png" alt="Please reload" height="300px" width="280px">
+      <img src="../Quick_Movers/Assests/Images/moving2 1.png" alt="Please reload" height="310px" width="320px">
     </div>
     <div>
       <h3>
@@ -44,8 +44,26 @@
       <p>
         In this current tough economic situations, living is already a hustle. Why then should you worry about how you should move to live better?
       </p>
+      <br>
+      <button>Learn More</button>
     </div>
   </section>
+  <!--Top Movers-->
+  <section>
+    <h3>Our Top Movers</h3>
+    <div class="container">
+      <div>
+        <img src="../Quick_Movers/Assests/Images/ehem 1.png" alt="Reload Image">
+        <h2>A+ Movers</h2>
+      </div>
+      <div>
+        <img src="..//Quick_Movers/Assests/Images/wewe 1.png" alt="Reload image">
+        
+
+      </div>
+    </div>
+  </section>
+  
 
 
 </body>
