--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../Quick_Movers/Assests/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Actor&family=Adamina&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
    <Section class="sec1">
     <!--Navigation Bar-->
     <nav>
-      <a href="#Home"> Home </a>
-      <a href="#About Us"> About Us </a>
-      <a href="Movers"> Movers </a>
-      <a href="Contact Us"> Contact Us </a>
+      <ul>
+        <li><a href="#Home"> Home </a></li>
+        <li><a href="#About Us"> About Us </a></li>
+        <li><a href="Movers"> Movers </a></li>
+        <li><a href="Contact Us"> Contact Us </a></li>
+        <li><a href="#Log In"><button id="but1">Log In</button></a></li>
+        <li><a href="#Sign Up"><button id="but2">Sign Up</button></a></li>
+      </ul>  
     </nav>
-    <div id="button">
-      <a href="#Log In"><button>Log In</button></a>
-      <a href="#Sign Up"><button>Sign Up</button></a>
-    </div>
     <br>
     <div class="content">
       <p id="motto">
         Change is inevitable but tasking. Find Your realible change partner
       </p>
       <br>
-      <p>
+      <p class="para2">
         In one roof, get the solutions to you house moving nightmares
       </p>
     </div>
@@ -36,7 +39,7 @@
     <div>
       <img src="../Quick_Movers/Assests/Images/moving2 1.png" alt="Please reload" height="310px" width="320px">
     </div>
-    <div>
+    <div class="cutHusle">
       <h3>
         Cut the Hustle
       </h3>
@@ -53,15 +56,68 @@
     <h3>Our Top Movers</h3>
     <div class="container">
       <div>
-        <img src="../Quick_Movers/Assests/Images/ehem 1.png" alt="Reload Image">
+        <img src="../Quick_Movers/Assests/Images/ehem 1.png" alt="Reload Image" height="200px" width="210px">
         <h2>A+ Movers</h2>
+
       </div>
       <div>
-        <img src="..//Quick_Movers/Assests/Images/wewe 1.png" alt="Reload image">
-        
+        <img src="..//Quick_Movers/Assests/Images/wewe 1.png" alt="Reload image" height="200px" width="210px">
+        <h2>Maridadi Home Logistics</h2>
+
+      </div>
+      <div>
+        <img src="../Quick_Movers/Assests/Images/movers 1.png" alt="Reload Image" height="200px" width="210px">
+        <h2>Ufalme Movers</h2>
+
+      </div>
+      <div>
+        <img src="../Quick_Movers/Assests/Images/chapchap 1.png" alt="Reload Image"height="200px" width="210px" >
+        <h2>Movers chapchap</h2>
+
+      </div>
+      <div>
+        <img src="../Quick_Movers/Assests/Images/mashinani 1.png" alt="Reload Image" height="200px" width="210px">
+        <h2>Songa Mashinani</h2>
+
+      </div>
+      <div>
+        <img src="../Quick_Movers/Assests/Images/songa 1.png" alt="Reload Image" height="200px" width="210px">
+        <h2>Upesi Logistics</h2>
 
       </div>
     </div>
+  </section>
+  <!--Move at a top of a button-->
+  <section>
+    <div class="Icon">
+      <ion-icon name="logo-facebook"></ion-icon>
+      <ion-icon name="logo-twitter"></ion-icon>
+      <ion-icon name="logo-instagram"></ion-icon>
+    </div>
+    <div class="columnHeading">
+      <div>
+        <h4>Column Heading</h4>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+      </div>
+      <div>
+        <h4>Column Heading</h4>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+      </div>
+      <div>
+        <h4>Column Heading</h4>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+        <p>Link goes here</p>
+      </div>
+    </div>
+
   </section>
   
 
