--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Actor&family=Adamina&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -52,9 +53,9 @@
     </div>
   </section>
   <!--Top Movers-->
-  <section>
+  <section class="container">
     <h3>Our Top Movers</h3>
-    <div class="container">
+    <div>
       <div>
         <img src="../Quick_Movers/Assests/Images/ehem 1.png" alt="Reload Image" height="200px" width="210px">
         <h2>A+ Movers</h2>
@@ -70,6 +71,8 @@
         <h2>Ufalme Movers</h2>
 
       </div>
+    </div>
+    <div>  
       <div>
         <img src="../Quick_Movers/Assests/Images/chapchap 1.png" alt="Reload Image"height="200px" width="210px" >
         <h2>Movers chapchap</h2>
@@ -88,36 +91,38 @@
     </div>
   </section>
   <!--Move at a top of a button-->
-  <section>
-    <div class="Icon">
-      <ion-icon name="logo-facebook"></ion-icon>
-      <ion-icon name="logo-twitter"></ion-icon>
-      <ion-icon name="logo-instagram"></ion-icon>
+  <section class="footer">
+    <h5>Moving at a top of <span>a button</span></h5>
+    <div id="footer">
+      <div class="Icon">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+      </div>
+      <div class="columnHeading">
+        <div>
+          <h4>Column Heading</h4>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+        </div>
+        <div>
+          <h4>Column Heading</h4>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+        </div>
+        <div>
+          <h4>Column Heading</h4>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+        </div>
+      </div>
     </div>
-    <div class="columnHeading">
-      <div>
-        <h4>Column Heading</h4>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-      </div>
-      <div>
-        <h4>Column Heading</h4>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-      </div>
-      <div>
-        <h4>Column Heading</h4>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-        <p>Link goes here</p>
-      </div>
-    </div>
-
   </section>
   
 
