Added the new css file for page2 on Movers Link

--- a/Assests/html/page.html
+++ b/Assests/html/page.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/styles2.css">
   <title>Document</title>
 </head>
 <body>
@@ -29,12 +30,137 @@
   </section>
   <!--Fill In info Goes here-->
   <Section>
-    <div>
-
+    <div class="mordernHouse">
+      <img src="../Images/Property House.png" alt="reload">
+      <br>
+      <div class="otherImg">
+        <img src="../Images/Rectangle.png" alt="reload">
+        <br>
+        <img src="../Images/Rectangle-1.png" alt="reload">
+        <br>
+        <img src="../Images/Rectangle-2.png" alt="reload">
+        <br>
+        <img src="../Images/Rectangle-3.png" alt="reload">
+        <br>
+        <img src="../Images/Rectangle-4.png" alt="reload">
+        <br>
+        <img src="../Images/Rectangle-5.png" alt="reload">
+        <br>
+        <img src="../Images/Rectangle-6.png" alt="reload">
+      </div>
+      <div class="details">
+        <h2>Details</h2>
+        <!--Icons goes here-->
+      </div>
+      <br>
+      <div class="description">
+        <h2>Description</h2>
+        <p>As a full service moving and storage company, we pride ourselves on servicing our customers with local and long distant moves. </p>
+        <p>Our residential moves start with a free in home estimate by a professional move consultant. We o er movers and a full packing service as well as antique care and special heavy services.</p>
+        <p>Moving overseas can be both intimidating and exciting. There is the prospect of seeing new places, becoming acquainted with people from different cultures, and learning customs different from those of your origin country. Nevertheless, particularly for the person who has lived abroad before, there are understandable anxieties, especially about the safe handling of one’s household possessions.</p>
+      </div>
+      <br>
+      <div class="features">
+        <ul>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+        </ul>
+        <ul>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+        </ul>
+        <ul>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+          <li>Air Conditioning</li>
+        </ul>
+      </div>
     </div>
     <div class="form">
+      <div class="profile">
+        <img src="#" alt="reload">
+        <div>
+          <h6>Kayley Hail</h6>
+          <P>View Profile</P>
+        </div>
+        <div>
+          <form action="name">Name</form>
+          <form action="Phone">Phone</form>
+          <form action="Email">Email</form>
+          <form action="Hello, I am interested in..">Hello, I am interested in..</form>
+          <br>
+          <button>Learn More</button>
+        </div>
+        
+      </div>
 
     </div>
   </Section>
+  <section class="listings">
+    <div>
+      <img src="../Images/Rectangle-7.png" alt="reload">
+      <h4>Malto House</h4>
+
+    </div>
+    <div>
+       <img src="../Images/Rectangle-8.png" alt="reload">
+      <h4>Malto House</h4>
+    </div>
+    <div>
+      <img src="../Images/Rectangle-9.png" alt="reload">
+      <h4>Malto House</h4>
+    </div>
+    <div>
+      <img src="../Images/Rectangle-10.png" alt="reload">
+      <h4>Malto House</h4>
+    </div>
+  </section>
+  <section class="dream">
+    <div>
+      <div>
+        <p>Make your dream a <span> reality</span></p>
+      </div>
+      <div>
+        <button>Work with us</button>
+      </div>
+    </div> 
+    <div id="footer">
+      <div class="Icon">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+      </div>
+      <div class="columnHeading">
+        <div>
+          <h4>Column Heading</h4>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+        </div>
+        <div>
+          <h4>Column Heading</h4>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+        </div>
+        <div>
+          <h4>Column Heading</h4>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+          <p>Link goes here</p>
+        </div>
+      </div>
+  </section>
 </body>
 </html>
