--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="#Home"> Home </a></li>
         <li><a href="#About Us"> About Us </a></li>
-        <li><a href="Movers"> Movers </a></li>
+        <li><a href="../Quick_Movers/Assests/html/page.html"> Movers </a></li>
         <li><a href="Contact Us"> Contact Us </a></li>
         <li><a href="#Log In"><button id="but1">Log In</button></a></li>
         <li><a href="#Sign Up"><button id="but2">Sign Up</button></a></li>
