Page 2 Updated on the movers link

--- a/Assests/html/page.html
+++ b/Assests/html/page.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <section>
+  <section class="sec1">
   <!--Navigation bar page 2-->
     <nav>
       <ul>
@@ -19,34 +19,36 @@
         <li><button>Work with us</button></li>
       </ul>
     </nav>
-    <div>
+    <div class="modern">
       <div>
         <h2>Modern House</h2>
         <p>Jooz Foster Ave Brooklyn NY Mino USA</p>
       </div>
-      <h5>$450,000</h5>
-      <h6>$1800/Sq ft</h6>
+      <div>
+        <h5>$450,000</h5>
+        <h6>$1800/Sq ft</h6>
+      </div>
     </div>
   </section>
   <!--Fill In info Goes here-->
-  <Section>
-    <div class="mordernHouse">
-      <img src="../Images/Property House.png" alt="reload">
+  <Section class="sec2">
+    <div class="prop">
+      <img src="../Images/Property House.png" alt="reload" height="350px" width="500px">
       <br>
       <div class="otherImg">
-        <img src="../Images/Rectangle.png" alt="reload">
+        <img src="../Images/Rectangle.png" alt="reload" height="50px" width="50px">
         <br>
-        <img src="../Images/Rectangle-1.png" alt="reload">
+        <img src="../Images/Rectangle-1.png" alt="reload" height="50px" width="50px">
         <br>
-        <img src="../Images/Rectangle-2.png" alt="reload">
+        <img src="../Images/Rectangle-2.png" alt="reload" height="50px" width="50px">
         <br>
-        <img src="../Images/Rectangle-3.png" alt="reload">
+        <img src="../Images/Rectangle-3.png" alt="reload" height="50px" width="50px">
         <br>
-        <img src="../Images/Rectangle-4.png" alt="reload">
+        <img src="../Images/Rectangle-4.png" alt="reload" height="50px" width="50px">
         <br>
-        <img src="../Images/Rectangle-5.png" alt="reload">
+        <img src="../Images/Rectangle-5.png" alt="reload" height="50px" width="50px">
         <br>
-        <img src="../Images/Rectangle-6.png" alt="reload">
+        <img src="../Images/Rectangle-6.png" alt="reload" height="50px" width="50px">
       </div>
       <div class="details">
         <h2>Details</h2>
@@ -60,28 +62,37 @@
         <p>Moving overseas can be both intimidating and exciting. There is the prospect of seeing new places, becoming acquainted with people from different cultures, and learning customs different from those of your origin country. Nevertheless, particularly for the person who has lived abroad before, there are understandable anxieties, especially about the safe handling of one’s household possessions.</p>
       </div>
       <br>
-      <div class="features">
-        <ul>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-        </ul>
-        <ul>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-        </ul>
-        <ul>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-          <li>Air Conditioning</li>
-        </ul>
+      <div>
+        <h2>features</h2>
+        <div id="features">
+          <div>
+            <ul>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+              <li>Air Conditioning</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="form">
@@ -104,29 +115,32 @@
 
     </div>
   </Section>
-  <section class="listings">
-    <div>
-      <img src="../Images/Rectangle-7.png" alt="reload">
-      <h4>Malto House</h4>
+  <section class="sec3">
+    <h2>Similar listings</h2>
+    <div class="listings">
+      <div>
+        <img src="../Images/Rectangle-7.png" alt="reload" height="200px" width="210px">>
+        <h4>Malto House</h4>
 
-    </div>
-    <div>
-       <img src="../Images/Rectangle-8.png" alt="reload">
-      <h4>Malto House</h4>
-    </div>
-    <div>
-      <img src="../Images/Rectangle-9.png" alt="reload">
-      <h4>Malto House</h4>
-    </div>
-    <div>
-      <img src="../Images/Rectangle-10.png" alt="reload">
-      <h4>Malto House</h4>
+      </div>
+      <div>
+         <img src="../Images/Rectangle-8.png" alt="reload" height="200px" width="210px">>
+        <h4>Malto House</h4>
+      </div>
+      <div>
+        <img src="../Images/Rectangle-9.png" alt="reload" height="200px" width="210px">>
+        <h4>Malto House</h4>
+      </div>
+      <div>
+        <img src="../Images/Rectangle-10.png" alt="reload" height="200px" width="210px">>
+        <h4>Malto House</h4>
+      </div>
     </div>
   </section>
-  <section class="dream">
-    <div>
+  <section class="footer">
+    <div class="dream">
       <div>
-        <p>Make your dream a <span> reality</span></p>
+        <p>Make your dream  a  <span> reality </span></p>
       </div>
       <div>
         <button>Work with us</button>
