--- a/Assests/html/page.html
+++ b/Assests/html/page.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/styles2.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -12,10 +15,10 @@
   <!--Navigation bar page 2-->
     <nav>
       <ul>
-        <li>Nav Link</li>
-        <li>Nav Link</li>
-        <li>Nav Link</li>
-        <li>Nav Link</li>
+        <li><a href="../../index.html"> Home </a></li>
+        <li><a href="#About Us"> About Us </a></li>
+        <li><a href="#Movers"> Movers </a></li>
+        <li><a href="Contact Us"> Contact Us </a></li>
         <li><button>Work with us</button></li>
       </ul>
     </nav>
@@ -53,6 +56,11 @@
       <div class="details">
         <h2>Details</h2>
         <!--Icons goes here-->
+        <div class="icon">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div> 
       </div>
       <br>
       <div class="description">
@@ -64,7 +72,7 @@
       <br>
       <div>
         <h2>features</h2>
-        <div id="features">
+        <div class="features">
           <div>
             <ul>
               <li>Air Conditioning</li>
@@ -138,14 +146,7 @@
     </div>
   </section>
   <section class="footer">
-    <div class="dream">
-      <div>
-        <p>Make your dream  a  <span> reality </span></p>
-      </div>
-      <div>
-        <button>Work with us</button>
-      </div>
-    </div> 
+    <h5>Moving at a top of <span>a button</span></h5>
     <div id="footer">
       <div class="Icon">
           <i class="fa-brands fa-facebook-f"></i>
@@ -175,6 +176,8 @@
           <p>Link goes here</p>
         </div>
       </div>
+    </div>
   </section>
+  
 </body>
 </html>
