--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../Quick_Movers/Assests/css/style.css">
+  <link rel="stylesheet" href="./Assests/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Actor&family=Adamina&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -18,15 +17,15 @@
       <ul>
         <li><a href="#Home"> Home </a></li>
         <li><a href="#About Us"> About Us </a></li>
-        <li><a href="../Quick_Movers/Assests/html/page.html"> Movers </a></li>
+        <li><a href="./Assests/html/page.html"> Movers </a></li>
         <li><a href="Contact Us"> Contact Us </a></li>
-        <li><a href="#Log In"><button id="but1">Log In</button></a></li>
-        <li><a href="#Sign Up"><button id="but2">Sign Up</button></a></li>
+        <li><a href="#Log In"><button class="but1">Log In</button></a></li>
+        <li><a href="#Sign Up"><button class="but2">Sign Up</button></a></li>
       </ul>  
     </nav>
     <br>
     <div class="content">
-      <p id="motto">
+      <p class="motto">
         Change is inevitable but tasking. Find Your realible change partner
       </p>
       <br>
@@ -40,7 +39,7 @@
     <div>
       <img src="../Quick_Movers/Assests/Images/moving2 1.png" alt="Please reload" height="310px" width="320px">
     </div>
-    <div class="cutHusle">
+    <div class="cut">
       <h3>
         Cut the Hustle
       </h3>
@@ -93,8 +92,8 @@
   <!--Move at a top of a button-->
   <section class="footer">
     <h5>Moving at a top of <span>a button</span></h5>
-    <div id="footer">
-      <div class="Icon">
+    <div class="footers">
+      <div class="icon">
           <i class="fa-brands fa-facebook-f"></i>
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-instagram"></i>
