--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!--Cut the Hustle Section-->
   <section class="sec2">
     <div>
-      <img src="../Quick_Movers/Assests/Images/moving2 1.png" alt="Please reload" height="310px" width="320px">
+      <img src="./Assests/Images/moving2 1.png" alt="Please reload" height="310px" width="320px">
     </div>
     <div class="cut">
       <h3>
@@ -56,34 +56,34 @@
     <h3>Our Top Movers</h3>
     <div>
       <div>
-        <img src="../Quick_Movers/Assests/Images/ehem 1.png" alt="Reload Image" height="200px" width="210px">
+        <img src="./Assests/Images/ehem 1.png" alt="Reload Image" height="200px" width="210px">
         <h2>A+ Movers</h2>
 
       </div>
       <div>
-        <img src="..//Quick_Movers/Assests/Images/wewe 1.png" alt="Reload image" height="200px" width="210px">
+        <img src="./Assests/Images/wewe 1.png" alt="Reload image" height="200px" width="210px">
         <h2>Maridadi Home Logistics</h2>
 
       </div>
       <div>
-        <img src="../Quick_Movers/Assests/Images/movers 1.png" alt="Reload Image" height="200px" width="210px">
+        <img src="./Assests/Images/movers 1.png" alt="Reload Image" height="200px" width="210px">
         <h2>Ufalme Movers</h2>
 
       </div>
     </div>
     <div>  
       <div>
-        <img src="../Quick_Movers/Assests/Images/chapchap 1.png" alt="Reload Image"height="200px" width="210px" >
+        <img src="./Assests/Images/chapchap 1.png" alt="Reload Image"height="200px" width="210px" >
         <h2>Movers chapchap</h2>
 
       </div>
       <div>
-        <img src="../Quick_Movers/Assests/Images/mashinani 1.png" alt="Reload Image" height="200px" width="210px">
+        <img src="./Assests/Images/mashinani 1.png" alt="Reload Image" height="200px" width="210px">
         <h2>Songa Mashinani</h2>
 
       </div>
       <div>
-        <img src="../Quick_Movers/Assests/Images/songa 1.png" alt="Reload Image" height="200px" width="210px">
+        <img src="./Assests/Images/songa 1.png" alt="Reload Image" height="200px" width="210px">
         <h2>Upesi Logistics</h2>
 
       </div>
